--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ ForestPMPlot
 <!-- <h1><div id="toptitle">METASOFT</div></h1> -->
 <div id="toptitle"><h1>METASOFT/ForestPMPlot</h1></div>
 <h3 class="subtitle" style="color: purple;">
-  This is a mirror site of METASOFT site (<a href="https://genetics.cs.ucla.edu/meta">genetic.cs.ucla.edu/meta</a>). 
+  This is a mirror site of METASOFT site (<a href="https://hanlab-snu.github.io/METASOFT/">https://hanlab-snu.github.io/METASOFT/</a>). 
   Because the original site has access problem from some countries, we provide this mirror site.
 </h3>
 
@@ -165,7 +165,7 @@ The dot size represents the study sample size.
 <p><a name="download"></a></p>
 <h2>Download</h2>
 <ul>
-<li><p><a href="../meta/repository/2.0.1/Metasoft.zip"
+<li><p><a href="meta/repository/2.0.1/Metasoft.zip"
 onClick="javascript: pageTracker._trackPageview('/downloads/zipfile');">
 Metasoft.zip
 </a> 
@@ -201,7 +201,7 @@ Metasoft_src.zip
 
 
 <ul>
-<li><p><a href="../ForestPMPlot/repository/1.0.3/ForestPMPlot.zip" 
+<li><p><a href="ForestPMPlot/repository/1.0.3/ForestPMPlot.zip" 
 onClick="javascript: pageTracker._trackPageview('/downloads/zipfile');">
 ForestPMPlot.zip
 </a>
@@ -640,8 +640,8 @@ Effectively identifying eQTLs from multiple tissues by combining mixed model and
 <h2>Contact</h2>
 <h3>METASOFT</h3>
 Buhm Han : 
-buhan (AT) cs.ucla.edu ,
-<a href="http://www.cs.ucla.edu/~buhan">http:<i></i>www.cs.ucla.du/~buhan</a> </p>
+buhm.han (AT) snu.ac.kr ,
+<a href="mail.snu.ac.kr">http:<i></i>mail.snu.ac.kr/a> </p>
 <h3>ForestPMPlot</h3>
 Eun Yong Kang :
 ekang (AT) cs.ucla.edu
