--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ ForestPMPlot
 <!-- <h1><div id="toptitle">METASOFT</div></h1> -->
 <div id="toptitle"><h1>METASOFT/ForestPMPlot</h1></div>
 <h3 class="subtitle" style="color: purple;">
-  This is a mirror site of METASOFT site (<a href="https://hanlab-snu.github.io/METASOFT/">https://hanlab-snu.github.io/METASOFT/</a>). 
+  This is a mirror site of METASOFT site (<a href="https://genetics.cs.ucla.edu/meta">genetic.cs.ucla.edu/meta</a>). 
   Because the original site has access problem from some countries, we provide this mirror site.
 </h3>
 
